Regression: Blender crash in weight paint mode and vertex select checked and then weights -> fix deforms #104358

Closed
opened 2023-02-05 09:35:51 +01:00 by Novice · 15 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.50

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-09 00:25, hash: 81558783e4
Worked: version: 3.4.0 Alpha, branch: arcpatch-D15914, commit date: 2022-09-08 15:28, hash: 4d08eb16d0

Caused by 05952aa94d

Simplified short description of error
Blender crashes if try to call Fix Deforms operator if Vertex Selection is enable and no one selected vertex haven't weight of selected bone.

Short description of error
Blender crash in weight paint mode and vertex select is clicked and then you click on Weights -> Fix Deforms.

Exact steps for others to reproduce the error

EDIT: simplified with demo file

  • Open the file
  • Click on Weights->Fix Deform

Full instructions

  • Start blender and load factory settings.

  • Toggle x-ray mode. (Makes it simpler to see)

  • Select default cube and tab into edit mode.

  • Make a horisontal loop cut.

  • Tab out of edit mode.

  • Add Armature -> Single bone.

  • Move the bone down 1. g + z - 1

  • With the armature selected, tab into edit mode.

  • Extrude the tip up 1. e + z + 1

  • Change viewport display for the armature to be "In Front". (Makes it simpler to see)

  • Select default cube and shift select the armature.

  • Ctrl+P -> Set Parent To -> Armature Deform With Automatic Weights

  • Select armature and shift select default cube.

  • Go into Weight Paint mode.

  • Select the top bone.

  • Click on Vertex Select. Make sure some vertexes are selected.

  • Click on Weights -> Fix Deforms

  • Blender crashes.

This looks a lot like #69004 Weight Paint - Fix Deform crash . Except the last step "Adjust the options at the bottom of viewport" is not needed.

Debug logs. There's an error in what the blender_system_info.txt shows. If I enable an add-on. like rigify, then click on File ->Defaults -> Load Factory Settings. Then click on Preferences -> Add-ons and search for rigify I see it's not enabled. But blender_system_info.txt shows it as an enabled add-on.

Also "Load Factory Settings" doesn't load blender as when downloaded, which I thought. It' seen in step 6. If I disable rigify there's no option "Single bone" when adding an armature. But if it's enabled and then loading factory settings "single bone" is still there. I have manually disabled rigify and other add-ons but the crash is still happens.

blender_system_info.txt

blender_debug_output.txt

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.50 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-09 00:25, hash: `81558783e4` Worked: version: 3.4.0 Alpha, branch: arcpatch-[D15914](https://archive.blender.org/developer/D15914), commit date: 2022-09-08 15:28, hash: `4d08eb16d0` Caused by 05952aa94d33eeb504fa63618ba35c2bcc8bd19b **Simplified short description of error** Blender crashes if try to call `Fix Deforms` operator if `Vertex Selection` is enable and no one selected vertex haven't weight of selected bone. **Short description of error** Blender crash in weight paint mode and vertex select is clicked and then you click on Weights -> Fix Deforms. **Exact steps for others to reproduce the error** EDIT: simplified with demo file - Open the file - Click on Weights->Fix Deform ### Full instructions - Start blender and load factory settings. - Toggle x-ray mode. (Makes it simpler to see) - Select default cube and tab into edit mode. - Make a horisontal loop cut. - Tab out of edit mode. - Add Armature -> Single bone. - Move the bone down 1. g + z - 1 - With the armature selected, tab into edit mode. - Extrude the tip up 1. e + z + 1 - Change viewport display for the armature to be "In Front". (Makes it simpler to see) - Select default cube and shift select the armature. - Ctrl+P -> Set Parent To -> Armature Deform With Automatic Weights - Select armature and shift select default cube. - Go into Weight Paint mode. - Select the top bone. - Click on Vertex Select. Make sure some vertexes are selected. - Click on Weights -> Fix Deforms - Blender crashes. This looks a lot like [#69004 Weight Paint - Fix Deform crash ](https://developer.blender.org/T69004). Except the last step "Adjust the options at the bottom of viewport" is not needed. Debug logs. There's an error in what the blender_system_info.txt shows. If I enable an add-on. like rigify, then click on File ->Defaults -> Load Factory Settings. Then click on Preferences -> Add-ons and search for rigify I see it's not enabled. But blender_system_info.txt shows it as an enabled add-on. Also "Load Factory Settings" doesn't load blender as when downloaded, which I thought. It' seen in step 6. If I disable rigify there's no option "Single bone" when adding an armature. But if it's enabled and then loading factory settings "single bone" is still there. I have manually disabled rigify and other add-ons but the crash is still happens. [blender_system_info.txt](https://archive.blender.org/developer/F14246468/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F14246467/blender_debug_output.txt)
Author
First-time contributor

Added subscriber: @BlenderAmateur

Added subscriber: @BlenderAmateur
Iliya Katueshenock changed title from Blender crash in weight paint mode and vertex select checked and then weights -> fix deforms to Regression: Blender crash in weight paint mode and vertex select checked and then weights -> fix deforms 2023-02-05 12:12:49 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Suspicion of d593497421 . But nothing more than a witch hunt

Suspicion of d593497421 . But nothing more than a witch hunt
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Stack trace on current master:

lines=5
blender.exe         :0x00007FF68DF5E570  moveCloserToDistanceFromPlane C:\blender-git\blender\source\blender\editors\object\object_vgroup.cc:1428
blender.exe         :0x00007FF68DF62510  vgroup_fix C:\blender-git\blender\source\blender\editors\object\object_vgroup.cc:1568
blender.exe         :0x00007FF68DF5FB80  vertex_group_fix_exec C:\blender-git\blender\source\blender\editors\object\object_vgroup.cc:3370
blender.exe         :0x00007FF68D68ABB0  wm_operator_invoke C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:1515
blender.exe         :0x00007FF68D68A1B0  wm_operator_call_internal C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:1706
blender.exe         :0x00007FF68D68D1E0  WM_operator_name_call_ptr_with_depends_on_cursor C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:1945
blender.exe         :0x00007FF68E101980  ui_apply_but_funcs_after C:\blender-git\blender\source\blender\editors\interface\interface_handlers.cc:1019
blender.exe         :0x00007FF68E10D220  ui_handler_region_menu C:\blender-git\blender\source\blender\editors\interface\interface_handlers.cc:11422
blender.exe         :0x00007FF68D689620  wm_handlers_do_intern C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3278
blender.exe         :0x00007FF68D688A50  wm_handlers_do C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3398
blender.exe         :0x00007FF68D68F0F0  wm_event_do_handlers C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3991
blender.exe         :0x00007FF68D674490  WM_main C:\blender-git\blender\source\blender\windowmanager\intern\wm.c:644
blender.exe         :0x00007FF68D169D60  main C:\blender-git\blender\source\creator\creator.c:590
blender.exe         :0x00007FF692B598B4  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFEA75F7600  BaseThreadInitThunk
ntdll.dll           :0x00007FFEA8102680  RtlUserThreadStart

#104358.blender.crash.txt

#104358.blender_debug_output.txt

#104358.blender_system_info.txt

Stack trace on current master: ``` lines=5 blender.exe :0x00007FF68DF5E570 moveCloserToDistanceFromPlane C:\blender-git\blender\source\blender\editors\object\object_vgroup.cc:1428 blender.exe :0x00007FF68DF62510 vgroup_fix C:\blender-git\blender\source\blender\editors\object\object_vgroup.cc:1568 blender.exe :0x00007FF68DF5FB80 vertex_group_fix_exec C:\blender-git\blender\source\blender\editors\object\object_vgroup.cc:3370 blender.exe :0x00007FF68D68ABB0 wm_operator_invoke C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:1515 blender.exe :0x00007FF68D68A1B0 wm_operator_call_internal C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:1706 blender.exe :0x00007FF68D68D1E0 WM_operator_name_call_ptr_with_depends_on_cursor C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:1945 blender.exe :0x00007FF68E101980 ui_apply_but_funcs_after C:\blender-git\blender\source\blender\editors\interface\interface_handlers.cc:1019 blender.exe :0x00007FF68E10D220 ui_handler_region_menu C:\blender-git\blender\source\blender\editors\interface\interface_handlers.cc:11422 blender.exe :0x00007FF68D689620 wm_handlers_do_intern C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3278 blender.exe :0x00007FF68D688A50 wm_handlers_do C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3398 blender.exe :0x00007FF68D68F0F0 wm_event_do_handlers C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:3991 blender.exe :0x00007FF68D674490 WM_main C:\blender-git\blender\source\blender\windowmanager\intern\wm.c:644 blender.exe :0x00007FF68D169D60 main C:\blender-git\blender\source\creator\creator.c:590 blender.exe :0x00007FF692B598B4 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFEA75F7600 BaseThreadInitThunk ntdll.dll :0x00007FFEA8102680 RtlUserThreadStart ``` [#104358.blender.crash.txt](https://archive.blender.org/developer/F14247387/T104358.blender.crash.txt) [#104358.blender_debug_output.txt](https://archive.blender.org/developer/F14247388/T104358.blender_debug_output.txt) [#104358.blender_system_info.txt](https://archive.blender.org/developer/F14247389/T104358.blender_system_info.txt)
First-time contributor

Added subscriber: @shadowrockzzz

Added subscriber: @shadowrockzzz
Member

Caused by 05952aa94d

CC @HooglyBoogly

Caused by 05952aa94d33eeb504fa63618ba35c2bcc8bd19b CC @HooglyBoogly
Member

Caused by 05952aa94d (second time commenting to check the bot that should mention this in the commit)

Caused by 05952aa94d (second time commenting to check the bot that should mention this in the commit)
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:34:40 +01:00

Since this was apparently caused by a patch tagged as "Core" (D15488), I'll re-label this with 'Module > Core'.

Since this was apparently caused by a patch tagged as "Core" ([D15488](https://archive.blender.org/developer/D15488)), I'll re-label this with 'Module > Core'.
Sybren A. Stüvel added
Module
Core
and removed
Module
Animation & Rigging
labels 2023-02-09 16:30:12 +01:00
Bastien Montagne added
Type
Bug
and removed
Type
Report
labels 2023-02-09 18:49:00 +01:00

Honestly think this is more of a Modelling module responsibility... This is really an 'internal affair' of Mesh data.

Honestly think this is more of a Modelling module responsibility... This is really an 'internal affair' of Mesh data.
Bastien Montagne added
Module
Modeling
and removed
Module
Core
labels 2023-02-10 11:39:30 +01:00
Philipp Oeser added the
Interest
Animation & Rigging
label 2023-02-10 12:50:34 +01:00
Hans Goudey self-assigned this 2023-02-14 01:16:22 +01:00
Hans Goudey added this to the 3.5 milestone 2023-02-14 17:51:05 +01:00
Member

I'll unassign myself since the operator will most likely be removed.

I'll unassign myself since the operator will most likely be removed.
Hans Goudey removed their assignment 2023-02-20 22:37:27 +01:00
Member

Not much info out there on Fix Deforms (was just curious if people are actuay using it), just putting this up for reference: https://archive.blender.org/wiki/index.php/User:Jason_hays22/GSoC-2011/

Was introduced with 566d936179

Not much info out there on `Fix Deforms` (was just curious if people are actuay using it), just putting this up for reference: https://archive.blender.org/wiki/index.php/User:Jason_hays22/GSoC-2011/ Was introduced with 566d9361798a

I have a PR ready for removal of the operator: #105237

I have a PR ready for removal of the operator: #105237

Since #105237 was merged, I think this report can be closed. There is no more "Fix Deforms" operator.

Since #105237 was merged, I think this report can be closed. There is no more "Fix Deforms" operator.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-03-03 14:35:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104358
No description provided.